--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 							<div class="inner">
 								<h1>Michael Kriegl</h1>
 								<p>Marine ecologist and environmental educator. <br> 
-									working at the interface between humanity and nature. 
+									working at the interface of people and nature. 
 									</p>
 							</div>
 						</div>
@@ -51,7 +51,7 @@
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic01.png" align=right style="width:190px;height:200px;" alt=""/></span>
-								<p>I am a marine ecologist with a fascination for the interplay between humanity and nature. My research interest lies at the interface between natural resource management and the human dimension of fisheries. <br><br> As part of the Humboldt Tipping project at the Centre for Tropical Marine Research (ZMT) in Bremen, I am currently working on a social-ecological network model of coastal benthic habitats and their users within the Humboldt Upwelling System in Peru. 
+								<p>I am a marine ecologist with a fascination for the interplay between society and nature. My research interest lies at the interface between natural resource management and the human dimension of fisheries. <br><br> As part of the Humboldt Tipping project at the Centre for Tropical Marine Research (ZMT) in Bremen, I am currently working on a social-ecological network model of coastal benthic habitats and their users within the Humboldt Upwelling System in Peru. 
 <br><br> I recently joined the Thuenen Institute in Rostock, 
 working on fisheries management issues within the marine protected areas of the Baltic Sea. 
 As part of the newly launched research mission "Protection and Sustainable Use of the Ocean" 
