--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
 <center>
 	
-<span class="image main"><img src="images/sudan2021.png"  alt=""/><figcaption> <br> Sudanese Red Sea - Deep South (2021) </figcaption></span>	
+<span class="image main"><img src="images/sudan2021.png"  alt=""/><figcaption> <br> Sudanese Red Sea | Deep South (2021) </figcaption></span>	
 
 <span class="image main"><img src="images/baltic.jpg"  alt=""/><figcaption> <br> Baltic Sea | RV Solea & RV Clupea (2020) </figcaption></span>
 
