--- a/index.html
+++ b/index.html
@@ -77,12 +77,14 @@
 
 
 <center>
-	
-<span class="image main"><img src="images/sudan2021.png"  alt=""/><figcaption> <br> Sudanese Red Sea | Deep South (2021) </figcaption></span>	
+
+<span class="image main"><img src="images/peru2022.png"  alt=""/><figcaption> <br> Peru (2022) </figcaption></span>
+
+<span class="image main"><img src="images/sudan2021.png"  alt=""/><figcaption> <br> Sudanese Red Sea | Deep South (2021) </figcaption></span>
 
 <span class="image main"><img src="images/baltic.jpg"  alt=""/><figcaption> <br> Baltic Sea | RV Solea & RV Clupea (2020) </figcaption></span>
 
-<span class="image main"><img src="images/sudan.jpg"  alt=""/><figcaption> <br> Sudanese Red Sea (2019) </figcaption></span>
+<span class="image main"><img src="images/sudan2019.jpg"  alt=""/><figcaption> <br> Sudanese Red Sea (2019) </figcaption></span>
 
 <span class="image main"><img src="images/chile.jpg"  alt=""/><figcaption> <br> Chile (2018) </figcaption></span>
 
