--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@
 								<h2 class="major">teaching</h2>
 								<span class="image main"><img src="images/pic04.jpg" alt="" /></span>
 								<p><h4>Beyond publications</h4>
-								Communicating science to where it can create the largest impact is my passion. I am dedicated to introducing young minds to the fascinating world of marine ecology and have diverse experience working with kids from kindergarten to scholars at university level. I teach in both classroom as well as outdoor settings: from national park to lecture hall; from land-based workshops to high school education on the open-ocean.
+								Communicating science to where it can create the largest impact is my passion.<br><br>
+								I am dedicated to introducing young minds to the fascinating world of marine ecology and have diverse experience working with kids from kindergarten to scholars at university level. I teach in both classroom as well as outdoor settings: from national park to lecture hall; from land-based workshops to high school education on the open-ocean.
 <br> <br> <br>
 
 
@@ -144,8 +145,16 @@
 <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://www.youtube.com/embed/-7Z5PMI3lZ8?enablejsapi=1' frameborder='0' allowfullscreen></iframe></div>
 
 
+<br>
 
+<p><h4>Workshops</h4>
 
+My teaching goal is to encourage people's curiosity. For this, I try to create spaces in which students feel comfortable, can develop their skills through exploration and thrive collectively. 	<br>	<br>
+I am always curious to try out innovative teaching approaches that challenge me and my students alike. To get a taste of this, or simply learn how to use R to understand the ways in which places and connections shape our world, check out the links below.
+	<br>
+								<br>
+								<b> mapR: Creating publication-ready maps in R </b> <br> <a href="https://michaelkriegl.shinyapps.io/mapR" >https://michaelkriegl.shinyapps.io/mapR</a> <br><br>
+								<b> senaR: Social-ecological network analysis in R </b> <br> <a href="https://michaelkriegl.shinyapps.io/mapR" >https://michaelkriegl.shinyapps.io/senaR</a> 
 
 
 <script>
