--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ I am always curious to try out innovative teaching approaches that challenge me 
 	<br>
 								<br>
 								<b> mapR: Creating publication-ready maps in R </b> <br> <a href="https://michaelkriegl.shinyapps.io/mapR" >https://michaelkriegl.shinyapps.io/mapR</a> <br><br>
-								<b> senaR: Social-ecological network analysis in R </b> <br> <a href="https://michaelkriegl.shinyapps.io/mapR" >https://michaelkriegl.shinyapps.io/senaR</a> 
+								<b> senaR: Social-ecological network analysis in R </b> <br> <a href="https://michaelkriegl.shinyapps.io/senaR" >https://michaelkriegl.shinyapps.io/senaR</a> 
 
 
 <script>
