--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
 <p><h4>Workshops</h4>
 
-My teaching goal is to encourage people's curiosity. For this, I try to create spaces in which students feel comfortable, can develop their skills through exploration and thrive collectively. 	<br>	<br>
+My teaching goal is to spark people's curiosity. For this, I try to create spaces in which students feel comfortable, can develop their skills through exploration and thrive collectively. 	<br>	<br>
 I am always curious to try out innovative teaching approaches that challenge me and my students alike. To get a taste of this, or simply learn how to use R to understand the ways in which places and connections shape our world, check out the links below.
 	<br>
 								<br>
