--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ I am always curious to try out innovative teaching approaches that challenge me 
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p style="font-size:8px" class="copyright">  Design: <a href="https://html5up.net">HTML5 UP</a>. PHOTO: &copy; Steve Evans.<br>&copy; Michael Kriegl.</p>
+						<p style="font-size:8px" class="copyright">  Design: <a href="https://html5up.net">HTML5 UP</a>. VIDEO/PHOTO: coverr.co<br>&copy; Michael Kriegl.</p>
 					</footer>
 
 			</div>
