--- a/index.html
+++ b/index.html
@@ -70,8 +70,9 @@
 
 						<!-- Science -->
 							<article id="science">
-								<h2 class="major">Science</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>									
+								<h2 class="major">Science</h2>							
+
+<style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://www.youtube.com/embed/1bu-jiz1EI8?enablejsapi=1' frameborder='0' allowfullscreen></iframe></div>
 
 <p> <h4>Humboldt-Tipping (2020 - present)</h4> Social-ecological network modelling of coastal benthic habitats and their users within the Humboldt Current Upwelling System, Peru</p>
 								
