updated the background video

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 
 		<!-- Wrapper -->
 			<div id="wrapper">
-
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
@@ -29,8 +28,8 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Michael Kriegl</h1>
-								<p>Marine ecologist and environmental educator. <br> 
-									working at the interface of people and nature. 
+								<p>Marine social-ecologist & Environmental educator. <br>
+									Connecting people and nature. 
 									</p>
 							</div>
 						</div>
@@ -47,7 +46,7 @@
 					</header>
 					
 					
-<video id="background-video" autoplay loop muted poster="images/fade_3_high_quality_start_frame.jpg">
+<video id="background-video" autoplay loop muted poster="images/start_frame.png">
 <source src="bgvid.mp4" type="video/mp4">
 </video>
 
@@ -249,7 +248,7 @@ I am always curious to try out innovative teaching approaches that challenge me 
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p style="font-size:8px" class="copyright">  Design: <a href="https://html5up.net">HTML5 UP</a>. VIDEO/PHOTO: coverr.co<br>&copy; Michael Kriegl.</p>
+						<p style="font-size:8px" class="copyright">  Design: <a href="https://html5up.net">HTML5 UP</a>. VIDEO: <a href="https://www.pexels.com/video/drone-view-of-a-fishing-boat-in-the-sea-1550081/">Fisk</a><br>&copy; Michael Kriegl.</p>
 					</footer>
 
 			</div>
