--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Michael Kriegl</h1>
-								<p>Marine social-ecologist & Environmental educator <br>
+								<p>Marine social-ecologist & Environmental educator. <br>
 									Connecting people and nature. 
 									</p>
 							</div>
@@ -57,7 +57,7 @@
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic01.jpg" align=right style="width:235px;margin:0px 0px 0px 20px" alt=""/></span>
-								<p>Hello, my name is Michael and I'm a marine social-ecologist fascinated by the interplay between ocean and society. <br><br> My research interest lies at the interface between natural resource management and the human dimension of fisheries: As part of the Leibniz Centre for Tropical Marine Research (ZMT), I explore the dynamics of small-scale fisheries management in Latin America using a social-ecological network lens.
+								<p>Hello, my name is Michael and I'm a marine social-ecologist fascinated by the interplay between ocean and society. <br><br> My research interest lies at the interface between natural resource management and the human dimension of fisheries: As part of the Leibniz Centre for Tropical Marine Research (ZMT), I explore the dynamics of small-scale fisheries management in Latin America using a social-ecological network modelling lens.
 
 <br><br> In addition to my research, I'm passionate about science communication, promoting ocean literacy and sparking curiosity in young minds.
 
@@ -73,9 +73,9 @@
 
 <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://www.youtube.com/embed/1bu-jiz1EI8?enablejsapi=1' frameborder='0' allowfullscreen></iframe></div>
 
-<p> <h4>Humboldt-Tipping II (2023 - present)</h4> Participatory modelling of social-ecological futures of Sechura Bay, Peru</p>
+<p> <h4>Humboldt-Tipping II (2023 - present)</h4> Participatory modelling of social-ecological futures in coastal Peru</p>
 
-<p> <h4>Humboldt-Tipping I (2020 - 2023)</h4> Social-ecological network modelling of coastal benthic habitats and their users in coastal Peru</p>
+<p> <h4>Humboldt-Tipping I (2020 - 2023)</h4> Social-ecological network modelling of coastal benthic habitats and their users along the coast of Peru</p>
 								
 <p> <h4>Protection and Sustainable Use of the Oceans (2020 - 2021)</h4> Effects of the exclusion of bottom trawling in marine protected areas (Natura 2000) of the German Baltic Sea </p>
 								
@@ -144,7 +144,7 @@
 								<span class="image main"><img src="images/pic04.jpg" alt="" /></span>
 								<p><h4>Beyond publications</h4>
 								My passion is taking science to where it has the greatest impact.<br><br>
-								I am dedicated to introducing young minds to the fascinating world of marine ecology and systems thinking. My pratical experience ranges from working with kids from kindergarten to scholars at university level. I thrive in both classroom as well as outdoor settings: from national park to lecture hall; from land-based workshops to high school education on the open ocean.
+								I am dedicated to introducing young minds to the fascinating world of marine ecology and systems thinking. My pratical experience ranges from working with kids from kindergarten to scholars at university level. I thrive in both classroom as well as outdoor settings: from national park to lecture hall, from land-based workshops to high school education on the open ocean.
 <br> <br> <br>
 
 
